# OS

./: .gitignore  Cargo.toml  README.md  clean_wsl.sh  run_wsl.sh
OVMFbin/: OVMF_VARS-pure-efi.fd
bootloader/: Cargo.toml
bootloader/src/: cpuid.rs  drivers.rs  efi.rs  framebuffer.rs  gdt.rs  idt.rs  interrupt_safe_mutex.rs  kernel.rs  main.rs  page_allocator.rs  paging.rs  print.rs  rust_global_allocators.rs  screen.rs  text_writer.rs  utils.rs
bootloader/src/drivers/: pic.rs  ps2_keyboard.rs  ps2_mouse.rs
font/: Cargo.toml
font/src/: lib.rs
font/src/font_data/: space_mono.bmfc  space_mono.fnt  space_mono_0.tga
gnu-efi/bootloader/: main.c
gnu-efi/x86_64/bootloader/: main.efi
kernel/: Makefile
kernel/src/: BasicRenderer.cpp  BasicRenderer.hpp  EfiMemory.cpp  EfiMemory.h  Framebuffer.h  Kernel.cpp  PSF1_Font.h  String.cpp  String.h  Typedefs.h  kernel.c
src/: allocator.rs  efi.rs  framebuffer.rs  gdt.rs  idt.rs  interrupts.rs  io.rs  logging.rs  main.rs  text_writer.rs
src/drivers/: keyboard.rs
src/efi/: gop.rs  guid.rs  tables.rs
